--- a/notebooks/01-intro.ipynb
+++ b/notebooks/01-intro.ipynb
@@ -161,7 +161,7 @@
     "### Install Libraries ###\n",
     "\n",
     "# Using !pip installs\n",
-    "!pip install spacy scikit-learn matplotlib"
+    "!pip install spacy scikit-learn matplotlib sentence-transformers"
    ]
   },
   {
