--- a/notebooks/03-building-weaviate-cluster.ipynb
+++ b/notebooks/03-building-weaviate-cluster.ipynb
@@ -104,7 +104,7 @@
     "### Install Libraries ###\n",
     "\n",
     "# Using !pip installs\n",
-    "!pip spacy weaviate-client pandas"
+    "!pip install spacy==3.7.5 weaviate-client==4.7.1 pandas"
    ]
   },
   {
@@ -115,6 +115,60 @@
    "outputs": [],
    "source": [
     "!python -m spacy download en_core_web_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "29290460",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: weaviate-client\n",
+      "Version: 4.7.1\n",
+      "Summary: A python native Weaviate client\n",
+      "Home-page: https://github.com/weaviate/weaviate-python-client\n",
+      "Author: Weaviate\n",
+      "Author-email: hello@weaviate.io,\n",
+      "License: BSD 3-clause\n",
+      "Location: /Applications/anaconda3/envs/tap/lib/python3.10/site-packages\n",
+      "Requires: authlib, grpcio, grpcio-health-checking, grpcio-tools, httpx, pydantic, requests, validators\n",
+      "Required-by: \n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show weaviate-client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "40dbe6bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: spacy\n",
+      "Version: 3.7.5\n",
+      "Summary: Industrial-strength Natural Language Processing (NLP) in Python\n",
+      "Home-page: https://spacy.io\n",
+      "Author: Explosion\n",
+      "Author-email: contact@explosion.ai\n",
+      "License: MIT\n",
+      "Location: /Applications/anaconda3/envs/tap/lib/python3.10/site-packages\n",
+      "Requires: catalogue, cymem, jinja2, langcodes, murmurhash, numpy, packaging, preshed, pydantic, requests, setuptools, spacy-legacy, spacy-loggers, srsly, thinc, tqdm, typer, wasabi, weasel\n",
+      "Required-by: en-core-web-lg, en-core-web-md, en-core-web-sm, en-core-web-trf, gliner-spacy, spacy-curated-transformers, spacy-llm, spacy-transformers\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show spacy"
    ]
   },
   {
@@ -137,10 +191,37 @@
     "import srsly\n",
     "import spacy\n",
     "\n",
-    "import pandas as pd\n",
     "\n",
+    "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from datetime import datetime, timezone\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "e3f75d93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: weaviate-client\n",
+      "Version: 4.7.1\n",
+      "Summary: A python native Weaviate client\n",
+      "Home-page: https://github.com/weaviate/weaviate-python-client\n",
+      "Author: Weaviate\n",
+      "Author-email: hello@weaviate.io,\n",
+      "License: BSD 3-clause\n",
+      "Location: /Applications/anaconda3/envs/tap/lib/python3.10/site-packages\n",
+      "Requires: authlib, grpcio, grpcio-health-checking, grpcio-tools, httpx, pydantic, requests, validators\n",
+      "Required-by: \n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show weaviate-client"
    ]
   },
   {
